Closed Bug 846320 Opened 12 years ago Closed 12 years ago

Offset mBasePosition by mStartTime when seeking.

Categories

(Core :: Audio/Video, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: padenot, Assigned: padenot)

Details

Attachments

(2 files)

I found this when trying to remove all the assertions that fire when doing a content/media mochitest run, I forgot to offset |mSeekTime| by |mStartTime| when assigning to |mBasePosition|, resulting in an assert blowing up repeatedly on test_seek.html, specifically when playing split.webm, that happens to start at 2.00 seconds. With this, I have 0 assertions firing during a full content/media mochitest run (locally).
This patch should be applied on top of the patches from bug 845676.
Attachment #719481 - Flags: review?(dbaron)
Also, there are a lot of assertions in content/media that are firing only on Windows builds... sometimes in *very* large numbers. Does this fix those?
I'll have a look today, I usually don't work on Windows.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Attachment #719477 - Flags: review?(kinetik) → review+
(In reply to David Baron [:dbaron] (don't cc:, use needinfo? instead) from comment #3) > Also, there are a lot of assertions in content/media that are firing only on > Windows builds... sometimes in *very* large numbers. Does this fix those? For the record, I think these are covered by bug 839650.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: