Bug 846320 - Offset mBasePosition by mStartTime when seeking. r=kinetik